--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-11.54MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20727, type: trojan, password: 5abd9b83-295e-35e4-b0b3-deed61eea35f, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.55MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-22.40MB/s(Youtube:不良林), server: 20.239.15.148, port: 13405, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-4.26MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.14MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-5.16MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 未知国家-2.56MB/s(Youtube:不良林), server: 104.19.3.36, port: 443, type: vmess, uuid: 9e6ceeff-2546-3690-ac00-6fcdf31dec94, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chcar, ws-headers: {Host: v2fly.samrt.website}}
-  - {name: 🇷🇺 俄罗斯联邦-4.00MB/s(Youtube:不良林), server: ru1.nodegz.top, port: 443, type: trojan, password: 0d15e40f-7093-392f-99fa-1bf845050bfe, sni: ru1.nodegz.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-237.0KB/s(Youtube:不良林), server: azqt001.xiba1.xyz, port: 20743, type: trojan, password: 965425cb-5d9e-306a-94bf-9961dd0ecf17, sni: azqt001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-4.40MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.63MB/s(Youtube:不良林), server: 107.173.111.182, port: 443, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.77MB/s(Youtube:不良林), server: gz-cm1-kl.hinetwork.tw, port: 11112, type: trojan, password: d46abf38-3a4c-3dfc-91e0-d8d3f1616c73, sni: gz-cm1-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.74MB/s(Youtube:不良林), server: 155.248.172.87, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
   - {name: 🇨🇳 中国-9.86MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-8.50MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.05MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.06MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇺🇸 美国-5.65MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.40MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
-      - 未知国家-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-237.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.86MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.40MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
-      - 未知国家-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-237.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.86MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.40MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
-      - 未知国家-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-237.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.86MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.40MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
-      - 未知国家-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-237.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.86MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.40MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
-      - 未知国家-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-237.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.86MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.40MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
-      - 未知国家-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-237.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.86MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.40MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
-      - 未知国家-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-237.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.86MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
