--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,117 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-205.9KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-4.99MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20715, type: trojan, password: 5abd9b83-295e-35e4-b0b3-deed61eea35f, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-12.70MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-22.93MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20721, type: trojan, password: 5abd9b83-295e-35e4-b0b3-deed61eea35f, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-424.7KB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
-  - {name: 🇰🇷 韩国-8.50MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.05MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-11.43MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20720, type: trojan, password: 5abd9b83-295e-35e4-b0b3-deed61eea35f, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.39MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.70MB/s(Youtube:不良林), server: 137.184.50.14, port: 443, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.49MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇩🇪 德国-1.06MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇺🇸 美国-5.65MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
-  - {name: 🇭🇰 香港-598.9KB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: 164.92.92.160, port: 444, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-17.15MB/s(Youtube:不良林), server: 20.239.15.148, port: 21552, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 20.239.15.148, port: 31138, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-17.70MB/s(Youtube:不良林), server: 20.239.15.148, port: 56895, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.87MB/s(Youtube:不良林), server: 23.94.212.120, port: 443, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-205.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-22.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-424.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-598.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-205.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-22.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-424.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-598.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-205.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-22.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-424.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-598.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.99MB/s(Youtube:不良林)
-      - 🇭🇰 香港-22.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-598.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.43MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-205.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-22.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-424.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-598.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-205.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-22.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-424.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-598.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-205.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-22.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-424.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-598.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-205.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-22.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-424.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-598.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
