--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-11.43MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20720, type: trojan, password: 5abd9b83-295e-35e4-b0b3-deed61eea35f, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.39MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.70MB/s(Youtube:不良林), server: 137.184.50.14, port: 443, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.49MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.06MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: 164.92.92.160, port: 444, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-17.15MB/s(Youtube:不良林), server: 20.239.15.148, port: 21552, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 20.239.15.148, port: 31138, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-17.70MB/s(Youtube:不良林), server: 20.239.15.148, port: 56895, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.87MB/s(Youtube:不良林), server: 23.94.212.120, port: 443, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.55MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-12.00MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20720, type: trojan, password: 5abd9b83-295e-35e4-b0b3-deed61eea35f, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-4.41MB/s(Youtube:不良林), server: 103.173.255.21, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-13.60MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.43MB/s(Youtube:不良林), server: 142.4.101.137, port: 20561, type: vmess, uuid: cf3eb126-ffbf-4452-91de-7393b6028782, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nmLuM34N/, ws-headers: {Host: 142.4.101.137}}
+  - {name: 🇺🇸 美国-2.39MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-883.2KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-892.4KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.21MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.07MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-11.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.55MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-883.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-892.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.21MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-11.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.55MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-883.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-892.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.21MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-11.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.55MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-883.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-892.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.21MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-11.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.00MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-11.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.55MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-883.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-892.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.21MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-11.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.55MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-883.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-892.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.21MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-11.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.55MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-883.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-892.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.21MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-11.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.55MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-883.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-892.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.21MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
